--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -1,17 +1,16 @@
-<div class="well">
-  <h4><%= Spree.t(:pay_with_this_method, scope: :bank_transfer) %></h4>
+<div>
+  <h4><%= t('spree.bank_transfer.pay_with_this_method') %></h4>
   <p>
-    <strong><%= Spree.t(:reason_for_payment, scope: :bank_transfer) %>: </strong>
-    <span><%= Spree.t(:reason_for_payment_instructions, scope: :bank_transfer) %></span>
+    <strong><%= t('spree.bank_transfer.reason_for_payment') %>: </strong>
+    <span><%= t('spree.bank_transfer.reason_for_payment_instructions') %></span>
     <br>
-    <strong><%= Spree.t(:holder, scope: :bank_transfer) %>: </strong>
+    <strong><%= t('spree.bank_transfer.holder') %>: </strong>
     <span><%= payment_method.preferred_holder %></span>
     <br>
-    <strong><%= Spree.t(:iban, scope: :bank_transfer) %>: </strong>
+    <strong><%= t('spree.bank_transfer.iban') %>: </strong>
     <span><%= payment_method.preferred_iban %></span>
     <br>
-    <strong><%= Spree.t(:bank_name, scope: :bank_transfer) %>: </strong>
+    <strong><%= t('spree.bank_transfer.bank_name') %>: </strong>
     <span><%= payment_method.preferred_bank_name %></span>
   </p>
 </div>
-
