Support solidus 2.9 and keep backwards compatibility with solidus 2.8 partial names

--- a/app/views/spree/checkout/payment/_banktransfer.html.erb
+++ b/app/views/spree/checkout/payment/_banktransfer.html.erb
@@ -1,16 +1,1 @@
-<div>
-  <h4><%= t('spree.bank_transfer.pay_with_this_method') %></h4>
-  <p>
-    <strong><%= t('spree.bank_transfer.reason_for_payment') %>: </strong>
-    <span><%= t('spree.bank_transfer.reason_for_payment_instructions') %></span>
-    <br>
-    <strong><%= t('spree.bank_transfer.holder') %>: </strong>
-    <span><%= payment_method.preferred_holder %></span>
-    <br>
-    <strong><%= t('spree.bank_transfer.iban') %>: </strong>
-    <span><%= payment_method.preferred_iban %></span>
-    <br>
-    <strong><%= t('spree.bank_transfer.bank_name') %>: </strong>
-    <span><%= payment_method.preferred_bank_name %></span>
-  </p>
-</div>
+<%= render 'spree/checkout/payment/bank_transfer', payment_method: payment_method %>
